package aiarbitrage

import (
	"context"
	"fmt"
	"sync"
	"time"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
	"google.golang.org/protobuf/types/known/timestamppb"

	pb "github.com/DimaJoyti/go-coffee/api/proto"
	"github.com/DimaJoyti/go-coffee/pkg/config"
	"github.com/DimaJoyti/go-coffee/pkg/logger"
	redismcp "github.com/DimaJoyti/go-coffee/pkg/redis-mcp"
)

// Service implements the AI Arbitrage service
type Service struct {
	pb.UnimplementedArbitrageServiceServer
	
	// Dependencies
	redisClient *redismcp.RedisClient
	aiService   *redismcp.AIService
	logger      *logger.Logger
	config      *config.Config
	
	// Core components
	opportunityDetector *OpportunityDetector
	matchingEngine      *MatchingEngine
	riskManager         *RiskManager
	marketAnalyzer      *MarketAnalyzer
	
	// State management
	participants map[string]*pb.Participant
	opportunities map[string]*pb.ArbitrageOpportunity
	trades       map[string]*pb.Trade
	
	// Concurrency control
	mutex sync.RWMutex
	
	// Channels for real-time updates
	opportunityUpdates chan *pb.OpportunityEvent
	priceUpdates       chan *pb.PriceUpdate
	
	// Background services
	isRunning bool
	stopChan  chan struct{}
}

// NewService creates a new AI Arbitrage service
func NewService(
	redisClient *redismcp.RedisClient,
	aiService *redismcp.AIService,
	logger *logger.Logger,
	cfg *config.Config,
) (*Service, error) {
	service := &Service{
		redisClient:        redisClient,
		aiService:          aiService,
		logger:             logger,
		config:             cfg,
		participants:       make(map[string]*pb.Participant),
		opportunities:      make(map[string]*pb.ArbitrageOpportunity),
		trades:            make(map[string]*pb.Trade),
		opportunityUpdates: make(chan *pb.OpportunityEvent, 1000),
		priceUpdates:      make(chan *pb.PriceUpdate, 1000),
		stopChan:          make(chan struct{}),
	}
	
	// Initialize components
	var err error
	
	service.opportunityDetector, err = NewOpportunityDetector(aiService, logger, cfg)
	if err != nil {
		return nil, fmt.Errorf("failed to create opportunity detector: %w", err)
	}
	
	service.matchingEngine, err = NewMatchingEngine(aiService, logger, cfg)
	if err != nil {
		return nil, fmt.Errorf("failed to create matching engine: %w", err)
	}
	
	service.riskManager, err = NewRiskManager(aiService, logger, cfg)
	if err != nil {
		return nil, fmt.Errorf("failed to create risk manager: %w", err)
	}
	
	service.marketAnalyzer, err = NewMarketAnalyzer(aiService, logger, cfg)
	if err != nil {
		return nil, fmt.Errorf("failed to create market analyzer: %w", err)
	}
	
	return service, nil
}

// Start starts the background services
func (s *Service) Start(ctx context.Context) error {
	s.mutex.Lock()
	defer s.mutex.Unlock()
	
	if s.isRunning {
		return fmt.Errorf("service is already running")
	}
	
	s.logger.Info("Starting AI Arbitrage Service background processes")
	
	// Start opportunity detection
	go s.opportunityDetectionLoop(ctx)
	
	// Start market analysis
	go s.marketAnalysisLoop(ctx)
	
	// Start risk monitoring
	go s.riskMonitoringLoop(ctx)
	
	// Start event processing
	go s.eventProcessingLoop(ctx)
	
	s.isRunning = true
	s.logger.Info("AI Arbitrage Service started successfully")
	
	return nil
}

// Stop stops the background services
func (s *Service) Stop() {
	s.mutex.Lock()
	defer s.mutex.Unlock()
	
	if !s.isRunning {
		return
	}
	
	s.logger.Info("Stopping AI Arbitrage Service")
	close(s.stopChan)
	s.isRunning = false
}

// CreateOpportunity creates a new arbitrage opportunity
func (s *Service) CreateOpportunity(ctx context.Context, req *pb.CreateOpportunityRequest) (*pb.CreateOpportunityResponse, error) {
	s.logger.WithFields(map[string]interface{}{
		"asset":      req.AssetSymbol,
		"buy_price":  req.BuyPrice,
		"sell_price": req.SellPrice,
	}).Info("Creating arbitrage opportunity")
	
	// Validate request
	if err := s.validateCreateOpportunityRequest(req); err != nil {
		return &pb.CreateOpportunityResponse{
			Success: false,
			Message: err.Error(),
		}, status.Error(codes.InvalidArgument, err.Error())
	}
	
	// Calculate profit margin
	profitMargin := ((req.SellPrice - req.BuyPrice) / req.BuyPrice) * 100
	
	// Generate AI analysis
	aiAnalysis, err := s.generateAIAnalysis(ctx, req)
	if err != nil {
		s.logger.WithError(err).Error("Failed to generate AI analysis")
		return &pb.CreateOpportunityResponse{
			Success: false,
			Message: "Failed to generate AI analysis",
		}, status.Error(codes.Internal, "AI analysis failed")
	}
	
	// Create opportunity
	opportunity := &pb.ArbitrageOpportunity{
		Id:            generateID("opp"),
		AssetSymbol:   req.AssetSymbol,
		BuyPrice:      req.BuyPrice,
		SellPrice:     req.SellPrice,
		ProfitMargin:  profitMargin,
		Volume:        req.Volume,
		BuyMarket:     req.BuyMarket,
		SellMarket:    req.SellMarket,
		Status:        pb.OpportunityStatus_OPPORTUNITY_ACTIVE,
		RiskScore:     aiAnalysis.VolatilityScore,
		ConfidenceScore: aiAnalysis.Confidence,
		CreatedAt:     timestamppb.Now(),
		ExpiresAt:     timestamppb.New(time.Now().Add(time.Hour)),
		AiAnalysis:    aiAnalysis,
		Tags:          req.Tags,
	}
	
	// Store opportunity
	s.mutex.Lock()
	s.opportunities[opportunity.Id] = opportunity
	s.mutex.Unlock()
	
	// Store in Redis for persistence
	if err := s.storeOpportunityInRedis(ctx, opportunity); err != nil {
		s.logger.WithError(err).Error("Failed to store opportunity in Redis")
	}
	
	// Publish opportunity event
	s.publishOpportunityEvent("CREATED", opportunity, "")
	
	s.logger.WithFields(map[string]interface{}{
		"opportunity_id": opportunity.Id,
		"profit_margin":  profitMargin,
	}).Info("Arbitrage opportunity created successfully")
	
	return &pb.CreateOpportunityResponse{
		Opportunity: opportunity,
		Success:     true,
		Message:     "Opportunity created successfully",
	}, nil
}

// GetOpportunities retrieves arbitrage opportunities
func (s *Service) GetOpportunities(ctx context.Context, req *pb.GetOpportunitiesRequest) (*pb.GetOpportunitiesResponse, error) {
	s.logger.WithFields(map[string]interface{}{
		"asset":      req.AssetSymbol,
		"min_profit": req.MinProfitMargin,
	}).Info("Getting arbitrage opportunities")
	
	s.mutex.RLock()
	defer s.mutex.RUnlock()
	
	var filteredOpportunities []*pb.ArbitrageOpportunity
	
	for _, opp := range s.opportunities {
		// Apply filters
		if req.AssetSymbol != "" && opp.AssetSymbol != req.AssetSymbol {
			continue
		}
		
		if req.MinProfitMargin > 0 && opp.ProfitMargin < req.MinProfitMargin {
			continue
		}
		
		if req.MaxRiskScore > 0 && opp.RiskScore > req.MaxRiskScore {
			continue
		}
		
		// Check market filters
		if len(req.Markets) > 0 {
			marketMatch := false
			for _, market := range req.Markets {
				if opp.BuyMarket == market || opp.SellMarket == market {
					marketMatch = true
					break
				}
			}
			if !marketMatch {
				continue
			}
		}
		
		// Check if opportunity is still active
		if opp.Status == pb.OpportunityStatus_OPPORTUNITY_ACTIVE {
			filteredOpportunities = append(filteredOpportunities, opp)
		}
	}
	
	// Apply pagination
	totalCount := len(filteredOpportunities)
	start := int(req.Offset)
	end := start + int(req.Limit)
	
	if start > totalCount {
		start = totalCount
	}
	if end > totalCount {
		end = totalCount
	}
	if req.Limit <= 0 {
		end = totalCount
	}
	
	if start < end {
		filteredOpportunities = filteredOpportunities[start:end]
	} else {
		filteredOpportunities = []*pb.ArbitrageOpportunity{}
	}
	
	return &pb.GetOpportunitiesResponse{
		Opportunities: filteredOpportunities,
		TotalCount:    int32(totalCount),
		Success:       true,
		Message:       fmt.Sprintf("Found %d opportunities", len(filteredOpportunities)),
	}, nil
}

// MatchParticipants matches buyers and sellers for an opportunity
func (s *Service) MatchParticipants(ctx context.Context, req *pb.MatchParticipantsRequest) (*pb.MatchParticipantsResponse, error) {
	s.logger.WithFields(map[string]interface{}{
		"opportunity_id":     req.OpportunityId,
		"participant_count":  len(req.ParticipantIds),
	}).Info("Matching participants")
	
	// Get opportunity
	s.mutex.RLock()
	opportunity, exists := s.opportunities[req.OpportunityId]
	s.mutex.RUnlock()
	
	if !exists {
		return &pb.MatchParticipantsResponse{
			Success: false,
			Message: "Opportunity not found",
		}, status.Error(codes.NotFound, "Opportunity not found")
	}
	
	// Get participants
	var participants []*pb.Participant
	for _, participantID := range req.ParticipantIds {
		if participant, exists := s.participants[participantID]; exists {
			participants = append(participants, participant)
		}
	}
	
	if len(participants) < 2 {
		return &pb.MatchParticipantsResponse{
			Success: false,
			Message: "Need at least 2 participants for matching",
		}, status.Error(codes.InvalidArgument, "Insufficient participants")
	}
	
	// Use matching engine to find optimal matches
	matches, err := s.matchingEngine.FindMatches(ctx, opportunity, participants)
	if err != nil {
		s.logger.WithError(err).Error("Failed to find matches")
		return &pb.MatchParticipantsResponse{
			Success: false,
			Message: "Failed to find matches",
		}, status.Error(codes.Internal, "Matching failed")
	}
	
	s.logger.WithFields(map[string]interface{}{
		"opportunity_id": req.OpportunityId,
		"match_count":    len(matches),
	}).Info("Found participant matches")
	
	return &pb.MatchParticipantsResponse{
		Matches: matches,
		Success: true,
		Message: fmt.Sprintf("Found %d matches", len(matches)),
	}, nil
}

// ExecuteTrade executes an arbitrage trade
func (s *Service) ExecuteTrade(ctx context.Context, req *pb.ExecuteTradeRequest) (*pb.ExecuteTradeResponse, error) {
	s.logger.WithFields(map[string]interface{}{
		"opportunity_id": req.OpportunityId,
		"buyer_id":       req.BuyerId,
		"seller_id":      req.SellerId,
	}).Info("Executing arbitrage trade")

	// Get opportunity
	s.mutex.RLock()
	opportunity, exists := s.opportunities[req.OpportunityId]
	s.mutex.RUnlock()

	if !exists {
		return &pb.ExecuteTradeResponse{
			Success: false,
			Message: "Opportunity not found",
		}, status.Error(codes.NotFound, "Opportunity not found")
	}

	// Validate participants
	buyer, buyerExists := s.participants[req.BuyerId]
	seller, sellerExists := s.participants[req.SellerId]

	if !buyerExists || !sellerExists {
		return &pb.ExecuteTradeResponse{
			Success: false,
			Message: "Participant not found",
		}, status.Error(codes.NotFound, "Participant not found")
	}

	// Risk assessment
	riskAssessment, err := s.riskManager.AssessTradeRisk(ctx, opportunity, buyer, seller, req.Quantity)
	if err != nil {
		s.logger.WithError(err).Error("Risk assessment failed")
		return &pb.ExecuteTradeResponse{
			Success: false,
			Message: "Risk assessment failed",
		}, status.Error(codes.Internal, "Risk assessment failed")
	}

	if !riskAssessment.Approved && !req.ForceExecute {
		return &pb.ExecuteTradeResponse{
			Success: false,
			Message: fmt.Sprintf("Trade rejected by risk management: %s", riskAssessment.Reason),
		}, status.Error(codes.FailedPrecondition, "Trade rejected by risk management")
	}

	// Calculate profit
	profit := (req.Price - opportunity.BuyPrice) * req.Quantity

	// Create trade
	trade := &pb.Trade{
		Id:            generateID("trade"),
		OpportunityId: req.OpportunityId,
		BuyerId:       req.BuyerId,
		SellerId:      req.SellerId,
		AssetSymbol:   opportunity.AssetSymbol,
		Quantity:      req.Quantity,
		BuyPrice:      opportunity.BuyPrice,
		SellPrice:     req.Price,
		Profit:        profit,
		Status:        pb.TradeStatus_TRADE_EXECUTING,
		ExecutedAt:    timestamppb.Now(),
	}

	// Store trade
	s.mutex.Lock()
	s.trades[trade.Id] = trade
	// Update opportunity status
	opportunity.Status = pb.OpportunityStatus_OPPORTUNITY_EXECUTING
	s.mutex.Unlock()

	// Execute trade (simulate for now)
	transactionID := generateID("tx")

	// Update trade status
	trade.Status = pb.TradeStatus_TRADE_COMPLETED
	trade.SettledAt = timestamppb.Now()

	// Update opportunity status
	opportunity.Status = pb.OpportunityStatus_OPPORTUNITY_COMPLETED

	s.logger.WithFields(map[string]interface{}{
		"trade_id":       trade.Id,
		"profit":         profit,
		"transaction_id": transactionID,
	}).Info("Trade executed successfully")

	return &pb.ExecuteTradeResponse{
		Trade:         trade,
		Success:       true,
		Message:       "Trade executed successfully",
		TransactionId: transactionID,
	}, nil
}

// GetMarketAnalysis provides AI-powered market analysis
func (s *Service) GetMarketAnalysis(ctx context.Context, req *pb.GetMarketAnalysisRequest) (*pb.GetMarketAnalysisResponse, error) {
	s.logger.WithFields(map[string]interface{}{
		"asset":     req.AssetSymbol,
		"timeframe": req.Timeframe,
	}).Info("Getting market analysis")

	// Generate market analysis using AI
	analysis, err := s.marketAnalyzer.AnalyzeMarket(ctx, req.AssetSymbol, req.Markets, req.Timeframe)
	if err != nil {
		s.logger.WithError(err).Error("Market analysis failed")
		return &pb.GetMarketAnalysisResponse{
			Success: false,
			Message: "Market analysis failed",
		}, status.Error(codes.Internal, "Market analysis failed")
	}

	return &pb.GetMarketAnalysisResponse{
		Analysis: analysis,
		Success:  true,
		Message:  "Market analysis completed",
	}, nil
}

// SubscribeToOpportunities provides real-time opportunity updates
func (s *Service) SubscribeToOpportunities(req *pb.SubscribeOpportunitiesRequest, stream pb.ArbitrageService_SubscribeToOpportunitiesServer) error {
	s.logger.WithFields(map[string]interface{}{
		"participant_id": req.ParticipantId,
		"assets":         req.AssetSymbols,
	}).Info("Client subscribed to opportunities")

	// Create subscription channel
	subscription := make(chan *pb.OpportunityEvent, 100)
	defer close(subscription)

	// Register subscription (simplified for demo)
	go func() {
		for {
			select {
			case event := <-s.opportunityUpdates:
				// Filter events based on subscription criteria
				if s.shouldSendEvent(event, req) {
					select {
					case subscription <- event:
					default:
						// Channel full, skip event
					}
				}
			case <-stream.Context().Done():
				return
			}
		}
	}()

	// Send events to client
	for {
		select {
		case event := <-subscription:
			if err := stream.Send(event); err != nil {
				s.logger.WithError(err).Error("Failed to send opportunity event")
				return err
			}
		case <-stream.Context().Done():
			s.logger.WithField("participant_id", req.ParticipantId).Info("Client disconnected from opportunity stream")
			return nil
		}
	}
}

// GetParticipantProfile retrieves participant information
func (s *Service) GetParticipantProfile(ctx context.Context, req *pb.GetParticipantProfileRequest) (*pb.GetParticipantProfileResponse, error) {
	s.mutex.RLock()
	participant, exists := s.participants[req.ParticipantId]
	s.mutex.RUnlock()

	if !exists {
		return &pb.GetParticipantProfileResponse{
			Success: false,
			Message: "Participant not found",
		}, status.Error(codes.NotFound, "Participant not found")
	}

	return &pb.GetParticipantProfileResponse{
		Participant: participant,
		Success:     true,
		Message:     "Participant profile retrieved",
	}, nil
}

// UpdateParticipantPreferences updates participant preferences
func (s *Service) UpdateParticipantPreferences(ctx context.Context, req *pb.UpdateParticipantPreferencesRequest) (*pb.UpdateParticipantPreferencesResponse, error) {
	s.mutex.Lock()
	defer s.mutex.Unlock()

	participant, exists := s.participants[req.ParticipantId]
	if !exists {
		return &pb.UpdateParticipantPreferencesResponse{
			Success: false,
			Message: "Participant not found",
		}, status.Error(codes.NotFound, "Participant not found")
	}

	// Update preferences
	participant.Preferences = req.Preferences

	s.logger.WithField("participant_id", req.ParticipantId).Info("Participant preferences updated")

	return &pb.UpdateParticipantPreferencesResponse{
		Success: true,
		Message: "Preferences updated successfully",
	}, nil
}

// Helper functions and background processes

// generateID generates a unique ID with prefix
func generateID(prefix string) string {
	return fmt.Sprintf("%s_%d_%d", prefix, time.Now().UnixNano(), time.Now().Unix())
}

// validateCreateOpportunityRequest validates the create opportunity request
func (s *Service) validateCreateOpportunityRequest(req *pb.CreateOpportunityRequest) error {
	if req.AssetSymbol == "" {
		return fmt.Errorf("asset symbol is required")
	}
	if req.BuyPrice <= 0 {
		return fmt.Errorf("buy price must be positive")
	}
	if req.SellPrice <= 0 {
		return fmt.Errorf("sell price must be positive")
	}
	if req.SellPrice <= req.BuyPrice {
		return fmt.Errorf("sell price must be higher than buy price")
	}
	if req.Volume <= 0 {
		return fmt.Errorf("volume must be positive")
	}
	if req.BuyMarket == "" || req.SellMarket == "" {
		return fmt.Errorf("both buy and sell markets are required")
	}
	return nil
}

// generateAIAnalysis generates AI analysis for an opportunity
func (s *Service) generateAIAnalysis(ctx context.Context, req *pb.CreateOpportunityRequest) (*pb.AIAnalysis, error) {
	// Use AI service to analyze the opportunity
	prompt := fmt.Sprintf(
		"Analyze arbitrage opportunity for %s: Buy at %.2f on %s, Sell at %.2f on %s, Volume: %.2f",
		req.AssetSymbol, req.BuyPrice, req.BuyMarket, req.SellPrice, req.SellMarket, req.Volume,
	)

	response, err := s.aiService.ProcessMessage(ctx, prompt, "arbitrage_analyzer")
	if err != nil {
		return nil, fmt.Errorf("AI analysis failed: %w", err)
	}

	// Parse AI response and create analysis (simplified for demo)
	profitMargin := ((req.SellPrice - req.BuyPrice) / req.BuyPrice) * 100

	return &pb.AIAnalysis{
		PricePrediction:  req.SellPrice * 1.02, // Simple prediction
		VolatilityScore:  calculateVolatilityScore(profitMargin),
		MarketSentiment:  0.7, // Neutral to positive
		RiskFactors:      []string{"Market volatility", "Execution risk", "Liquidity risk"},
		Opportunities:    []string{"Price arbitrage", "Market inefficiency"},
		Recommendation:   response,
		Confidence:       0.85,
	}, nil
}

// calculateVolatilityScore calculates volatility score based on profit margin
func calculateVolatilityScore(profitMargin float64) float64 {
	// Higher profit margins might indicate higher volatility
	if profitMargin > 10 {
		return 0.8
	} else if profitMargin > 5 {
		return 0.6
	} else if profitMargin > 2 {
		return 0.4
	}
	return 0.2
}

// storeOpportunityInRedis stores opportunity in Redis for persistence
func (s *Service) storeOpportunityInRedis(ctx context.Context, opportunity *pb.ArbitrageOpportunity) error {
	key := fmt.Sprintf("arbitrage:opportunity:%s", opportunity.Id)

	// Convert to JSON and store (simplified)
	data := fmt.Sprintf(`{
		"id": "%s",
		"asset_symbol": "%s",
		"buy_price": %.2f,
		"sell_price": %.2f,
		"profit_margin": %.2f,
		"status": "%d",
		"created_at": "%s"
	}`, opportunity.Id, opportunity.AssetSymbol, opportunity.BuyPrice,
		opportunity.SellPrice, opportunity.ProfitMargin,
		int32(opportunity.Status), opportunity.CreatedAt.AsTime().Format(time.RFC3339))

	return s.redisClient.Set(ctx, key, data, time.Hour*24).Err()
}

// publishOpportunityEvent publishes opportunity events
func (s *Service) publishOpportunityEvent(eventType string, opportunity *pb.ArbitrageOpportunity, participantID string) {
	event := &pb.OpportunityEvent{
		EventType:     eventType,
		Opportunity:   opportunity,
		Timestamp:     timestamppb.Now(),
		ParticipantId: participantID,
	}

	select {
	case s.opportunityUpdates <- event:
	default:
		// Channel full, skip event
		s.logger.Warn("Opportunity updates channel full, skipping event")
	}
}

// shouldSendEvent determines if an event should be sent to a subscriber
func (s *Service) shouldSendEvent(event *pb.OpportunityEvent, req *pb.SubscribeOpportunitiesRequest) bool {
	// Filter by asset symbols
	if len(req.AssetSymbols) > 0 {
		found := false
		for _, symbol := range req.AssetSymbols {
			if event.Opportunity.AssetSymbol == symbol {
				found = true
				break
			}
		}
		if !found {
			return false
		}
	}

	// Filter by profit margin
	if req.MinProfitMargin > 0 && event.Opportunity.ProfitMargin < req.MinProfitMargin {
		return false
	}

	// Filter by markets
	if len(req.Markets) > 0 {
		found := false
		for _, market := range req.Markets {
			if event.Opportunity.BuyMarket == market || event.Opportunity.SellMarket == market {
				found = true
				break
			}
		}
		if !found {
			return false
		}
	}

	return true
}

// Background processing loops

// opportunityDetectionLoop continuously detects new arbitrage opportunities
func (s *Service) opportunityDetectionLoop(ctx context.Context) {
	ticker := time.NewTicker(time.Second * 30) // Check every 30 seconds
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			s.detectNewOpportunities(ctx)
		case <-ctx.Done():
			return
		case <-s.stopChan:
			return
		}
	}
}

// marketAnalysisLoop continuously analyzes market conditions
func (s *Service) marketAnalysisLoop(ctx context.Context) {
	ticker := time.NewTicker(time.Minute * 5) // Analyze every 5 minutes
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			s.performMarketAnalysis(ctx)
		case <-ctx.Done():
			return
		case <-s.stopChan:
			return
		}
	}
}

// riskMonitoringLoop continuously monitors risk levels
func (s *Service) riskMonitoringLoop(ctx context.Context) {
	ticker := time.NewTicker(time.Minute * 2) // Monitor every 2 minutes
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			s.monitorRiskLevels(ctx)
		case <-ctx.Done():
			return
		case <-s.stopChan:
			return
		}
	}
}

// eventProcessingLoop processes events and notifications
func (s *Service) eventProcessingLoop(ctx context.Context) {
	for {
		select {
		case <-ctx.Done():
			return
		case <-s.stopChan:
			return
		}
	}
}

// detectNewOpportunities detects new arbitrage opportunities
func (s *Service) detectNewOpportunities(ctx context.Context) {
	s.logger.Debug("Detecting new arbitrage opportunities")

	// Simulate opportunity detection (in real implementation, this would
	// fetch data from multiple exchanges and compare prices)

	// Example: Create a sample opportunity for demonstration
	if len(s.opportunities) < 5 { // Limit for demo
		sampleOpportunity := &pb.ArbitrageOpportunity{
			Id:              generateID("auto_opp"),
			AssetSymbol:     "COFFEE",
			BuyPrice:        100.0,
			SellPrice:       105.0,
			ProfitMargin:    5.0,
			Volume:          1000.0,
			BuyMarket:       "Exchange_A",
			SellMarket:      "Exchange_B",
			Status:          pb.OpportunityStatus_OPPORTUNITY_ACTIVE,
			RiskScore:       0.3,
			ConfidenceScore: 0.8,
			CreatedAt:       timestamppb.Now(),
			ExpiresAt:       timestamppb.New(time.Now().Add(time.Hour)),
			AiAnalysis: &pb.AIAnalysis{
				PricePrediction: 107.0,
				VolatilityScore: 0.4,
				MarketSentiment: 0.7,
				RiskFactors:     []string{"Market volatility"},
				Opportunities:   []string{"Price arbitrage"},
				Recommendation:  "Good opportunity with moderate risk",
				Confidence:      0.8,
			},
			Tags: []string{"auto-detected", "coffee"},
		}

		s.mutex.Lock()
		s.opportunities[sampleOpportunity.Id] = sampleOpportunity
		s.mutex.Unlock()

		// Store in Redis
		if err := s.storeOpportunityInRedis(ctx, sampleOpportunity); err != nil {
			s.logger.WithError(err).Error("Failed to store auto-detected opportunity")
		}

		// Publish event
		s.publishOpportunityEvent("AUTO_DETECTED", sampleOpportunity, "")

		s.logger.WithFields(map[string]interface{}{
			"opportunity_id": sampleOpportunity.Id,
			"profit_margin":  sampleOpportunity.ProfitMargin,
		}).Info("Auto-detected new arbitrage opportunity")
	}
}

// performMarketAnalysis performs periodic market analysis
func (s *Service) performMarketAnalysis(ctx context.Context) {
	s.logger.Debug("Performing market analysis")

	// Analyze current opportunities and market conditions
	s.mutex.RLock()
	opportunityCount := len(s.opportunities)
	s.mutex.RUnlock()

	s.logger.WithField("active_opportunities", opportunityCount).Info("Market analysis completed")

	// Update market sentiment and risk factors
	// In a real implementation, this would analyze market data,
	// news sentiment, trading volumes, etc.
}

// monitorRiskLevels monitors risk levels across all opportunities
func (s *Service) monitorRiskLevels(ctx context.Context) {
	s.logger.Debug("Monitoring risk levels")

	s.mutex.RLock()
	defer s.mutex.RUnlock()

	highRiskCount := 0
	for _, opp := range s.opportunities {
		if opp.RiskScore > 0.7 {
			highRiskCount++
		}
	}

	if highRiskCount > 0 {
		s.logger.WithField("high_risk_count", highRiskCount).Warn("High risk opportunities detected")
	}

	s.logger.WithFields(map[string]interface{}{
		"total_opportunities":      len(s.opportunities),
		"high_risk_opportunities": highRiskCount,
	}).Debug("Risk monitoring completed")
}
